--- a/data/stellarium.1
+++ b/data/stellarium.1
@@ -31,8 +31,8 @@ Instead, it has documentation in the GNU Info format; see below.
 .SH IMPORTANT
 \fBstellarium\fP should not be used for very high accurate calculation or ephemerids like eclipse predictions. However, it is the ideal program to prepare an observation evening with naked eye, binocular, or small telescope.
 .SH CONFIGURATION
-When you first launch stellarium, it will use the files default_config.txt and default_location.txt from /usr/share/stellarium/config/ to create respectively config.txt and location.txt into \fB$HOME/.stellarium\fP.
-The configuration options from this files are quite self-explanatory. Please read the comments in default_config.txt and default_location.txt to tune them. Some configuration files examples are in /usr/share/doc/stellarium/examples.
+When you first launch stellarium, it will use the file default_config.ini from /usr/share/stellarium/config/ to create  config.ini into \fB$HOME/.stellarium\fP.
+The configuration options from this file are quite self-explanatory. Some configuration files examples are in /usr/share/doc/stellarium/examples.
 .SH OPTIONS
 .TP
 .B "\-v, \-\-version"
