--- a/doc/developer_guide.tex
+++ b/doc/developer_guide.tex
@@ -8,7 +8,7 @@
 \setlength {\evensidemargin} {0cm}
 
 \begin{document}
-\title{\textbf{Stellarium Programming guide} \\{rev 0.1}}
+\title{\textbf{Stellarium Developer guide} \\{v 0.1}}
 \author{Fabien Ch\'ereau}
 
 \maketitle
