--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: stellarium 0.7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-03-25 23:57+0100\n"
+"POT-Creation-Date: 2005-03-26 01:18+0100\n"
 "PO-Revision-Date: 2004-12-18 02:43+0100\n"
 "Last-Translator:  <stellarium@free.fr>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -151,15 +151,15 @@ msgid "%s: mag %.1f"
 msgstr "%s: mag %.1f"
 
 #: src/hip_star_mgr.cpp:76
-#, fuzzy, c-format
+#, c-format
 msgid "Loading Hipparcos star data "
-msgstr "Chargement du catalogue d'étoiles Hipparcos...\n"
+msgstr "Chargement du catalogue d'étoiles Hipparcos "
 
 #. 120417;
 #: src/hip_star_mgr.cpp:94
 #, c-format
 msgid "(%d stars)...\n"
-msgstr ""
+msgstr "(%d étoiles)...\n"
 
 #. RA=Right ascention, DE=Declinaison, Mag=Magnitude
 #: src/nebula.cpp:52
@@ -181,14 +181,14 @@ msgid "Loading nebulas data...\n"
 msgstr "Chargement des données Nébuleuse...\n"
 
 #: src/nebula_mgr.cpp:68
-#, fuzzy, c-format
+#, c-format
 msgid "%d deep space objects will be loaded\n"
-msgstr "Chargement des objets du ciel profond: %d/%d"
+msgstr "Chargement de %d objets du ciel profond\n"
 
 #: src/nebula_mgr.cpp:104
 #, c-format
 msgid "Done loading DSOs\n"
-msgstr ""
+msgstr "Chargement des DSOs terminé\n"
 
 #: src/observator.cpp:61
 #, c-format
@@ -206,7 +206,7 @@ msgid "Saving location %s to file %s\n"
 msgstr "Enregistre le lieu %s dans le fichier %s\n"
 
 #: src/planet.cpp:84
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Name :%s%s\n"
 "RA : %s\n"
@@ -251,7 +251,6 @@ msgid "Names of the Constellations [V]"
 msgstr "Noms des constellations [V]"
 
 #: src/stel_ui.cpp:400
-#, fuzzy
 msgid "Constellations Art [R]"
 msgstr "Images des Constellations [R]"
 
@@ -291,11 +290,31 @@ msgstr "Monture Equatorial/Altazimutale [ENTER]"
 msgid "Configuration window"
 msgstr "Fenêtre de configuration"
 
-#: src/stel_ui.cpp:422
+#: src/stel_ui.cpp:421
 msgid "Quit [CTRL + Q]"
 msgstr "Quitte [CTRL + Q]"
 
-#: src/stel_ui.cpp:482
+#: src/stel_ui.cpp:423
+msgid "Quit [CMD + Q]"
+msgstr "Quitte [CMD + Q]"
+
+#: src/stel_ui.cpp:430
+msgid "Decrease Time Speed [J]"
+msgstr "Ralenti le Temps"
+
+#: src/stel_ui.cpp:432
+msgid "Real Time Speed [K]"
+msgstr "Vitesse Temps Réel"
+
+#: src/stel_ui.cpp:434
+msgid "Increase Time Speed [L]"
+msgstr "Accélère le Temps"
+
+#: src/stel_ui.cpp:436
+msgid "Return to Current Time"
+msgstr "Revient au Temps Actuel"
+
+#: src/stel_ui.cpp:479
 msgid ""
 "4 Directions     : Deplacement RA/DE\n"
 "Page Up/Down     : Zoom\n"
@@ -324,12 +343,250 @@ msgid ""
 "S   : Stars\n"
 "I   : About Stellarium\n"
 "F1  : Toggle fullscreen if possible.\n"
-"CTRL+Q : Quit\n"
-"CMD+Q  : Quit\n"
 msgstr ""
+"4 Directions     : Déplacement RA/DE\n"
+"Page Up/Down     : Zoom\n"
+"CTRL+Up/Down     : Zoom\n"
+"Clic Gauche      : Selectionne Etoile\n"
+"Clic Droit       : Déselectionne\n"
+"CTRL+Clic Gauche : Déselectionne\n"
+"ESPACE : Centre sur l'objet sélectionnét\n"
+"ENTER : Monture Equatoriale/Altazimuthale\n"
+"CTRL + S : Prend une photo d'écran\n"
+"C   : Dessin des Constellations\n"
+"V   : Noms des Constellations\n"
+"R   : Images des Constellations\n"
+"E   : Grille Equatoriale\n"
+"Z   : Grille Azimuthale\n"
+"N   : Nébuleuses\n"
+"P   : Mise en valeur des Planètes\n"
+"G   : Sol\n"
+"F   : Brume\n"
+"Q   : Points Cardinaux\n"
+"A   : Atmosphère\n"
+"H   : Aide\n"
+"4   : Ligne de l'écliptique\n"
+"5   : Ligne de l'équateur céleste\n"
+"T   : Suivi d'objet\n"
+"S   : Etoiles\n"
+"I   : A propos de Stellarium\n"
+"F1  : Alterne mode plein écran si possible.\n"
 
-#~ msgid "Star catalog: %d stars\n"
-#~ msgstr "Catalogue d'étoile: %d étoiles\n"
+#: src/stel_ui.cpp:508
+msgid "CMD+Q : Quit\n"
+msgstr "CMD+Q : Quitte\n"
 
-#~ msgid "Reading a total of %d nebulas\n"
-#~ msgstr "Lecture de %d nebuleuses\n"
+#: src/stel_ui.cpp:510
+msgid "CTRL+Q : Quit\n"
+msgstr "CTRL+Q : Quitte\n"
+
+#: src/stel_ui_conf.cpp:27
+msgid "Configuration"
+msgstr "Configuration"
+
+#: src/stel_ui_conf.cpp:46
+msgid "Stars"
+msgstr "Etoiles"
+
+#: src/stel_ui_conf.cpp:51
+msgid "Star Names. Up to mag :"
+msgstr "Noms des étoiles. +- :"
+
+#: src/stel_ui_conf.cpp:64
+msgid "Star Twinkle. Amount :"
+msgstr "Scintillement       :"
+
+#: src/stel_ui_conf.cpp:81
+msgid "Constellations"
+msgstr "Constellations"
+
+#: src/stel_ui_conf.cpp:86
+msgid "Constellations Names"
+msgstr "Noms des Constellations"
+
+#: src/stel_ui_conf.cpp:91
+msgid "Selected Constellation Only"
+msgstr "Constellation sélectionnée seulement"
+
+#: src/stel_ui_conf.cpp:102
+msgid "Nebulas"
+msgstr "Nébuleuses"
+
+#: src/stel_ui_conf.cpp:107
+msgid "Nebulas Names. Up to mag :"
+msgstr "Noms des nébuleuses. +- :"
+
+#: src/stel_ui_conf.cpp:124
+msgid "Planets"
+msgstr "Planètes"
+
+#: src/stel_ui_conf.cpp:129
+msgid "Moon Scale"
+msgstr "Grossissement de la lune"
+
+#: src/stel_ui_conf.cpp:136
+msgid "Planets Hints"
+msgstr "Infos Planètes"
+
+#: src/stel_ui_conf.cpp:147
+msgid "Equatorial Grid"
+msgstr "Grille Equatoriale"
+
+#: src/stel_ui_conf.cpp:152
+msgid "Azimuthal Grid"
+msgstr "Grille Azimutale"
+
+#: src/stel_ui_conf.cpp:157
+msgid "Equator Line"
+msgstr "Equateur Céleste"
+
+#: src/stel_ui_conf.cpp:162
+msgid "Ecliptic Line"
+msgstr "Ecliptique"
+
+#: src/stel_ui_conf.cpp:173
+msgid "Ground"
+msgstr "Sol"
+
+#: src/stel_ui_conf.cpp:178
+msgid "Cardinal Points"
+msgstr "Points Cardinaux"
+
+#: src/stel_ui_conf.cpp:183
+msgid "Atmosphere"
+msgstr "Atmosphère"
+
+#: src/stel_ui_conf.cpp:188
+msgid "Fog"
+msgstr "Brume"
+
+#: src/stel_ui_conf.cpp:193 src/stel_ui_conf.cpp:324
+msgid "Save as default"
+msgstr "Enregistre comme défaut"
+
+#: src/stel_ui_conf.cpp:205
+msgid " Current Time :"
+msgstr "  Temps Actuel :"
+
+#: src/stel_ui_conf.cpp:214
+msgid " Time Zone :"
+msgstr "  Zone horaire :"
+
+#: src/stel_ui_conf.cpp:218
+msgid " Using System Default Time Zone"
+msgstr "  Utilise la zone horaire par défaut"
+
+#: src/stel_ui_conf.cpp:229
+msgid " Time speed : "
+msgstr "  Vitesse du Temps : "
+
+#: src/stel_ui_conf.cpp:237
+msgid ""
+"Use key J and L to decrease and increase\n"
+"   time speed.\n"
+"Use key K to return to real time speed."
+msgstr ""
+"Les touches J et L augmentent et diminuent\n"
+"   la vitesse du temps.\n"
+"touche K pour revenir en vitesse temps réelle."
+
+#: src/stel_ui_conf.cpp:253
+msgid "Longitude : "
+msgstr "Longitude : "
+
+#: src/stel_ui_conf.cpp:255
+msgid "Latitude : "
+msgstr "Latitude : "
+
+#: src/stel_ui_conf.cpp:271
+msgid "Save location"
+msgstr "Enregistre la position"
+
+#: src/stel_ui_conf.cpp:282
+msgid " Projection :"
+msgstr " Projection :"
+
+#: src/stel_ui_conf.cpp:288
+msgid "Fisheye Projection Mode"
+msgstr "Mode de Projection Fisheye"
+
+#: src/stel_ui_conf.cpp:293
+msgid "Disk Viewport"
+msgstr "Mode de vue disque"
+
+#: src/stel_ui_conf.cpp:298
+msgid " Screen Resolution :"
+msgstr " Resolution écran  :"
+
+#: src/stel_ui_conf.cpp:302
+msgid "Restart program for"
+msgstr "Relancer le programme"
+
+#: src/stel_ui_conf.cpp:303
+msgid "change to apply."
+msgstr "pour activer le changement."
+
+#: src/stel_ui_conf.cpp:331
+msgid "Date & Time"
+msgstr "Date & Heur"
+
+#: src/stel_ui_conf.cpp:332
+msgid "Location"
+msgstr "Position"
+
+#: src/stel_ui_conf.cpp:333
+msgid "Video"
+msgstr "Vidéo"
+
+#: src/stel_ui_conf.cpp:334
+msgid "Rendering"
+msgstr "Rendu"
+
+#: src/stel_ui_conf.cpp:392
+msgid "Saving rendering options in file "
+msgstr "Enregistre les options de rendu dans le fichier "
+
+#: src/stel_ui_conf.cpp:435
+msgid "Saving video size "
+msgstr "Enregistre la taille "
+
+#: src/stel_ui_conf.cpp:435
+msgid " in file "
+msgstr " dans le fichier "
+
+#: src/solarsystem.cpp:77
+#, c-format
+msgid "Loading Solar System data...\n"
+msgstr "Chargement des données Système Solaire...\n"
+
+#: src/stel_core.cpp:443
+#, c-format
+msgid ""
+"The current config file is from a previous version (>=0.6.0).\n"
+"Previous options will be imported in the new config file.\n"
+msgstr ""
+"Le fichier de configuration trouvé provient d'une version précédente "
+"(>=0.6.0).\n"
+"Les options précédentes vont être importées dans le nouveau fichier de "
+"configuration.\n"
+
+#. The config file is too old to try an importation
+#: src/stel_core.cpp:462
+#, c-format
+msgid ""
+"The current config file is from a version too old for parameters to be "
+"imported (%s).\n"
+"It will be replaced by the default config file.\n"
+msgstr ""
+"Le fichier de configuration trouvé provient d'une version trop ancienne pour "
+"êtreimporté (%s).\n"
+"Il va être remplacé par le fichier de configuration par défaut.\n"
+
+#: src/stel_core.cpp:485
+msgid "Loading configuration file "
+msgstr "Chargement du fichier de configuration "
+
+#: src/stel_core.cpp:493
+msgid "ERROR : The current config file is from a different version ("
+msgstr ""
+"ERREUR : Le fichier de configuration actuel provient d'une autre version ("
