--- a/po/fr.po
+++ b/po/fr.po
@@ -9,13 +9,14 @@ msgstr ""
 "Project-Id-Version: stellarium 0.7.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-22 15:50+0200\n"
-"PO-Revision-Date: 2005-04-13 10:01-0700\n"
-"Last-Translator:  <stellarium@free.fr>\n"
-"Language-Team: French <traduc@traduc.org>\n"
+"PO-Revision-Date: 2005-06-22 16:10+0200\n"
+"Last-Translator: Fabien Chereau,,,<Fabien.Chereau@obspm.fr> <chereau@obspm.fr>\n"
+"Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: KBabel 0.9.6\n"
 
 #: src/main.cpp:52
 #, c-format
@@ -350,9 +351,8 @@ msgid "CMD+Q : Quit\n"
 msgstr "CMD+Q : Quitte\n"
 
 #: src/stel_ui.cpp:517
-#, fuzzy
 msgid "Help"
-msgstr "Aide [H]"
+msgstr "Aide"
 
 #: src/stel_ui_conf.cpp:27
 msgid "Configuration"
@@ -562,13 +562,12 @@ msgstr "Chargement du fichier de configuration "
 
 #: src/stel_core.cpp:509
 msgid "ERROR : The current config file is from a different version ("
-msgstr ""
-"ERREUR : Le fichier de configuration actuel provient d'une autre version ("
+msgstr "ERREUR : Le fichier de configuration actuel provient d'une autre version ("
 
 #: src/stel_core.cpp:1250
-#, fuzzy, c-format
+#, c-format
 msgid "Loading constellations for sky culture: \"%s\"\n"
-msgstr "Chargement des Images Constellations : %d/%d"
+msgstr "Chargement des Images Constellations pour la civilisation : \"%s\"\n"
 
 #. Submenus
 #: src/stel_ui_tuiconf.cpp:84
@@ -634,7 +633,7 @@ msgid "Time Display Format: "
 msgstr "Format du Temps: "
 
 #: src/stel_ui_tuiconf.cpp:127
-#, fuzzy
+
 msgid "Date Display Format: "
 msgstr "Format du Temps: "
 
@@ -696,48 +695,45 @@ msgstr "Magnitude"
 
 #: src/stel_ui_tuiconf.cpp:186
 msgid "Magnitude Sizing Multiplier: "
-msgstr ""
+msgstr "Ratio taille/magnitude: "
 
 #: src/stel_ui_tuiconf.cpp:190
 msgid "Milky Way intensity: "
-msgstr ""
+msgstr "Luminosité de la Voie Lactée"
 
 #: src/stel_ui_tuiconf.cpp:194
 msgid "Zoom duration: "
-msgstr ""
+msgstr "Durée du zoom"
 
 #. 6. Scripts
 #: src/stel_ui_tuiconf.cpp:200
-#, fuzzy
 msgid "Local Script: "
-msgstr "Scripts "
+msgstr "Scripts locaux"
 
 #: src/stel_ui_tuiconf.cpp:206
-#, fuzzy
 msgid "CD/DVD Script: "
-msgstr "Scripts "
+msgstr "Scripts CD/DVD:"
 
 #. 7. Administration
 #: src/stel_ui_tuiconf.cpp:214
-#, fuzzy
 msgid "Load Default Configuration: "
-msgstr "Chargement du fichier de configuration "
+msgstr "Chargement de la configuration par défaut: "
 
 #: src/stel_ui_tuiconf.cpp:216
 msgid "Save Current Configuration as Default: "
-msgstr ""
+msgstr "Utilise la configuration courante pardéfaut"
 
 #: src/stel_ui_tuiconf.cpp:218
 msgid "Update me via Internet: "
-msgstr ""
+msgstr "Mise à jour via Internet"
 
 #: src/stel_ui_tuiconf.cpp:232
 msgid "N-S Centering Offset: "
-msgstr ""
+msgstr "Décalage du centrage N-S"
 
 #: src/stel_ui_tuiconf.cpp:236
 msgid "E-W Centering Offset: "
-msgstr ""
+msgstr "Décalage du centrage E-O"
 
 #~ msgid "Changing sky culture to %s\n"
 #~ msgstr "Utilise les noms de la culture %s\n"
@@ -756,3 +752,4 @@ msgstr ""
 
 #~ msgid "Hawaiian"
 #~ msgstr "Hawaien"
+
