--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-22 15:50+0200\n"
 "PO-Revision-Date: 2005-06-22 16:23+0200\n"
-"Last-Translator: Fabien Chereau,,,<Fabien.Chereau@obspm.fr> <chereau@obspm.fr>\n"
+"Last-Translator: Fabien Chereau,,,<Fabien.Chereau@obspm.fr> <chereau@obspm."
+"fr>\n"
 "Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -562,7 +563,8 @@ msgstr "Chargement du fichier de configuration "
 
 #: src/stel_core.cpp:509
 msgid "ERROR : The current config file is from a different version ("
-msgstr "ERREUR : Le fichier de configuration actuel provient d'une autre version ("
+msgstr ""
+"ERREUR : Le fichier de configuration actuel provient d'une autre version ("
 
 #: src/stel_core.cpp:1250
 #, c-format
@@ -751,4 +753,3 @@ msgstr "Décalage du centrage E-O"
 
 #~ msgid "Hawaiian"
 #~ msgstr "Hawaien"
-
