--- a/po/fr.po
+++ b/po/fr.po
@@ -10,8 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-06-25 02:05+0200\n"
 "PO-Revision-Date: 2005-06-22 16:23+0200\n"
-"Last-Translator: Fabien Chereau,,,<Fabien.Chereau@obspm.fr> <chereau@obspm."
-"fr>\n"
+"Last-Translator: Fabien Chereau,\n"
 "Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
